<?xml version="1.0"?>
<package>
  <name>netft_control</name>
  <version>0.1.0</version>
  <description>The netft_control package</description>
  
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/fsuarez6/netft</url>
  <url type="bugtracker">https://github.com/fsuarez6/netft/issues</url>
  <url type="repository">https://github.com/fsuarez6/netft</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>curl</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>force_torque_sensor_controller</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tinyxml</build_depend>
  
  <run_depend>controller_manager</run_depend>
  <run_depend>curl</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>force_torque_sensor_controller</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tinyxml</run_depend>
</package>
